FEATURE: Added algorithm selector parameter
